# commit

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  TODOS.md  commit.db-shm  commit.db-wal  fly.toml
.github/workflows/: ci.yml  deploy.yml
contracts/: foundry.toml
contracts/deployments/: base-sepolia.json
contracts/script/: Deploy.s.sol
contracts/src/: CommitAttestationRegistry.sol
contracts/test/: CommitAttestationRegistry.t.sol
docs/plans/: 2026-04-11-001-fix-proof-binding-security-plan.md  2026-04-12-001-feat-own-notary-server-plan.md  2026-04-12-002-feat-attestation-signature-verification-plan.md  2026-04-12-003-feat-github-actions-cicd-plan.md  2026-04-12-004-feat-e2e-endorsement-flow-plan.md  2026-04-12-005-fix-security-hardening-batch-plan.md  2026-04-12-006-feat-network-keyring-key-sharing-plan.md  2026-04-12-007-feat-l2-attestation-submission-plan.md  2026-04-12-008-feat-commit-score-v2-plan.md  2026-04-13-001-refactor-remove-dead-keyring-code-plan.md  2026-04-13-002-feat-trust-page-get-extension-cta-plan.md  2026-04-13-003-feat-github-card-badge-cta-plan.md  2026-04-13-006-fix-design-audit-batch-plan.md  (+4 more)
extension/: .eslintrc.json  STORE_LISTING.md  background.js  content-github.js  content-google.js  manifest.json  offscreen.html  offscreen.js  package-lock.json  package.json  package.sh  playwright.config.ts  tlsn_wasm.js  trust-card.css  tsconfig.json  webpack.config.js
src/: lib.rs  main.rs  validation.rs
tests/: api.rs  score.rs
verifier/: Dockerfile  config.yaml  entrypoint.sh  fly.toml
(+41 files in other folders)
