[package]
name = "commit-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcs = "0.1"
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
k256 = { version = "0.13", features = ["ecdsa", "pem"] }
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "f2ff4ba7" }
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[[bin]]
name = "commit-backend"
path = "src/main.rs"

[[bin]]
name = "commit-mcp"
path = "src/bin/mcp.rs"

[dev-dependencies]
axum-test = "20.0.0"
serial_test = "3.4.0"
tokio-test = "0.4.5"
